Fixed menu on mobile devices

--- a/_sass/_dl-menu.scss
+++ b/_sass/_dl-menu.scss
@@ -123,7 +123,6 @@
 	.dl-menu {
 		margin: 0;
 		position: absolute;
-		width: 100%;
 		max-width: 400px;
 		overflow-y: auto;
 		max-height: 600px;
